# AH_03_03

./: .dockerignore  .env.local.mock  .env.local.mock.example  .env.local.real.example  .gitattributes  .gitignore  Makefile  README.md  clustering_log.txt  docker-compose.yml  drop_one_out_log.txt  elbow_log.txt  final_clustering_log.txt  health_check_ocr_report.md  package-lock.json  pr_files.txt  pyproject.toml  selected_vars_log.txt  test_claude.py
.github/workflows/: checks.yml  deploy-prod.yml
ML/baseline_model/: v0_DM_catboost_base.ipynb
ML/features/: fe_age_bin.py  fe_alcohol.py  fe_body.py  fe_exercise.py  feature_engineering_example.py
ML/final(seed)/: CatBoost_SeedEnsemble_DL_FE.ipynb
ML/models/: cat_v2.0_DM_fe.ipynb  cat_v2.0_HTN_fe.ipynb  xgb_v2.0_DL_fe.ipynb
ai_runtime/: Dockerfile  main.py
ai_runtime/common/: image_normalizer.py
ai_runtime/cv/: drug_lookup.py  router.py  settings.py
ai_runtime/jobs/: consumer.py  exam_ocr_handler.py  handlers.py  medication_ocr_handler.py  redis_stream.py  scheduler.py
ai_runtime/llm/: diet_recommendation_rewriter.py  evaluation.py  explanation_service.py  health_chatbot.py  llm_client.py  llm_generator.py  prompt_templates.py  rag_generator.py  rag_sources.py  recommendation_message.py  response_router.py  risk_mapper.py  rule_engine.py  safety.py  static_intents.py
ai_worker/: Dockerfile  main.py
ai_worker/cv/: router.py  settings.py
ai_worker/data/: hn19_diabetes_DE1pr.csv  hn2224_preprocessed.csv  hn22_preprocessed.csv  hn2415_all_eda_with_preprocess.ipynb  hn2415_all_eda_with_preprocess_fixed.ipynb  hn_all_preprocessed.csv
ai_worker/jobs/: consumer.py  redis_stream.py
ai_worker/llm/: explanation_service.py  grounding.py  health_chatbot.py  llm_client.py  llm_generator.py  prompt_templates.py  rag_generator.py  rag_sources.py  recommendation_message.py  response_router.py  risk_mapper.py  rule_engine.py  safety.py  schemas.py
ai_worker/ml/: DM_baseline_catboost.py  Dyslip_baseline_catboost.py  analysis.py  (+8 more)
app/: Dockerfile  main.py
docs/: diet_analysis_next_steps.md  schema_normalization_plan.md
envs/: example.local.env  example.prod.env
experiment/: health_check_ocr_report.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
ocr-compare/: README.md
scripts/: audit_ai_runtime_capabilities.py  audit_ai_worker_capabilities.py  certbot.sh  compare_dual_stage_screening.py  deployment.sh  docker_stack.sh  init_local_dev_db.py  seed_current_user_dashboard_demo.py  seed_demo_users.py  seed_mvp_challenges.py  seed_mvp_faqs.py  setup_local_mvp_db.py  verify_auth_delivery_config.py  verify_demo_ready.py  verify_precision_analysis_api.py  warmup_ml_models.py
tests/: conftest.py
(+1238 files in other folders)
