[project]
name = "ai-health-example"
version = "0.1.0"
description = "AI 헬스케어 파이널 프로젝트 예시용"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "ipykernel>=7.2.0",
    "fastapi>=0.128.0",
    "langfuse>=3.0.0",
    "openai>=2.36.0",
    "paddleocr>=3.5.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.22",
    "python-dotenv>=1.0.0",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
    "tomlkit>=0.14.0",
    "uvicorn>=0.40.0",
    "anthropic>=0.102.0",
    "firebase-admin>=7.4.0",
    "catboost>=1.2.10",
    "openpyxl>=3.1.5",
]

[dependency-groups]
ai = [
    "catboost>=1.2.10",
    "numpy>=2.3.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers>=5.2.0",
    "xgboost>=3.1.2",
]
app = [
    "aerich>=0.9.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "orjson>=3.11.5",
    "pyjwt>=2.10.1",
    "tortoise-orm>=0.25.3",
    "uvicorn>=0.40.0",
]
dev = [
    "coverage>=7.13.2",
    "mypy>=1.19.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
    "types-python-dateutil>=2.9.0.20260124",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.aerich]
tortoise_orm = "app.core.db.databases.TORTOISE_ORM"
location = "./app/core/db/migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["app/tests", ".git", ".venv", "node_modules", "frontend/node_modules"]

[tool.ruff]
# 기본 라인 길이 설정
line-length = 120
target-version = "py312"
exclude = ["*.ipynb"]

[tool.ruff.lint]
# 사용할 린트 규칙들 선택
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = ["UP046", "E501", "N806", "N803", "C901", "B905", "B023", "B007", "F601", "E402"]

# 특정 파일에서 무시할 규칙들
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"db/migrations/*" = ["ALL"]
"ai_worker/ml/X2/*" = ["N999"]
"ai_worker/vision/router.py" = ["B008"]
"ai_worker/vision/evaluate.py" = ["C901", "E402"]

[tool.ruff.format]
# 포매터 설정
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
